Checkpoint commit for refreshing branch
